# home-services

./: .gitignore  Cargo.toml  Dockerfile.esphome  Dockerfile.hs110  Dockerfile.matter-bridge  Dockerfile.tasmota  Dockerfile.timeseries-logger  README.md  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: copilot-instructions.md
.github/instructions/: rust-modularity.instructions.md
.github/workflows/: publish-esphome.yml  publish-hs110.yml  publish-matter-bridge.yml  publish-tasmota.yml  publish-timeseries-logger.yml
crates/hs-contracts/: Cargo.toml
crates/hs-contracts/src/: capability.rs  state.rs
crates/hs-core/: Cargo.toml
crates/hs-core/src/: device_service.rs  lib.rs  runtime.rs  telemetry.rs
crates/hs-device-bridge-matter/: Cargo.toml
crates/hs-device-bridge-matter/src/: app.rs  config.rs  main.rs  mapper.rs  matter_model.rs  matter_ws.rs
crates/hs-device-contracts/: Cargo.toml
crates/hs-device-contracts/src/: availability.rs  device.rs  lib.rs  state.rs
crates/hs-device-core/: Cargo.toml
crates/hs-device-core/src/: device_service.rs  lib.rs  runtime.rs  runtime_metrics.rs  state_filter.rs  telemetry.rs
crates/hs-eventbus-api/: Cargo.toml
crates/hs-eventbus-api/src/: command_subscribe.rs  lib.rs  publish.rs  subscribe.rs
crates/hs-eventbus-mqtt-ha/: Cargo.toml
crates/hs-eventbus-mqtt-ha/src/: adapter.rs  command.rs  config.rs  ingest_adapter.rs  lib.rs  metrics.rs  payloads.rs  publish_adapter.rs  topics.rs  transport.rs
crates/hs-eventbus-mqtt-sparkplug-b/: Cargo.toml  build.rs
crates/hs-eventbus-mqtt-sparkplug-b/src/: command.rs  config.rs  ingest_adapter.rs  lib.rs  metrics.rs  payloads.rs  publish_adapter.rs  sparkplug.rs  topics.rs  transport.rs
crates/hs-logger-core/: Cargo.toml
crates/hs-logger-core/src/: core_metadata.rs  datapoint.rs  lib.rs  logger_config.rs  metrics.rs  point_writer.rs
crates/hs-service-device-demo/: Cargo.toml
crates/hs-service-device-demo/src/: app.rs  bootstrap.rs  main.rs  time.rs
crates/hs-service-device-esphome/: Cargo.toml
crates/hs-service-device-esphome/src/: app.rs  config.rs  esphome.rs  main.rs
crates/hs-service-device-tasmota/: Cargo.toml
crates/hs-service-device-tasmota/src/: app.rs  bootstrap.rs  config.rs  main.rs  tasmota_client.rs  time.rs
crates/hs-service-device-tplink-hs110/: Cargo.toml
crates/hs-service-device-tplink-hs110/src/: app.rs  bootstrap.rs  command_payload.rs  config.rs  hs110_client.rs  main.rs  tplink_protocol.rs
crates/hs-service-timeseries-logger/: Cargo.toml
crates/hs-service-timeseries-logger/src/: app.rs  influx_writer.rs  main.rs  status.rs  time.rs  tracking_processor.rs  writer.rs
docs/: architecture.md  ha-mqtt-discovery.md
infra/grafana/provisioning/dashboards/: demo-service.yml
infra/grafana/provisioning/dashboards-json/: demo-service-overview.json
infra/grafana/provisioning/datasources/: influxdb.yml
infra/otel-collector/: config.yaml
tools/: sparkplug_dcmd_toggle.py
