[workspace]
members = [
    "crates/hs-core",
    "crates/hs-contracts",
    "crates/hs-eventbus-api",
    "crates/hs-eventbus-mqtt-ha",
    "crates/hs-service-device-demo",
    "crates/hs-service-device-esphome",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rumqttc = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.30"
opentelemetry-appender-tracing = "0.29"
opentelemetry = "0.29"
opentelemetry_sdk = { version = "0.29", features = ["rt-tokio", "experimental_metrics_periodicreader_with_async_runtime"] }
opentelemetry-otlp = { version = "0.29", features = ["http-proto", "reqwest-client", "trace", "metrics", "logs"] }
esphome-native-api = "2.0.7"
uuid = { version = "1.16", features = ["v4", "serde"] }
