[package]
name = "hs-device-bridge-matter"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64 = "0.22"
futures-util = "0.3"
hs-device-contracts = { path = "../hs-device-contracts" }
hs-eventbus-api = { path = "../hs-eventbus-api" }
hs-eventbus-mqtt-sparkplug-b = { path = "../hs-eventbus-mqtt-sparkplug-b" }
rustls = "0.23"
rustls-pemfile = "2"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite = { version = "0.24", default-features = false, features = ["rustls-tls-webpki-roots", "connect"] }
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
