[package]
name = "hs-device-core"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
hs-device-contracts = { path = "../hs-device-contracts" }
hs-eventbus-api = { path = "../hs-eventbus-api" }
reqwest.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry-appender-tracing.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
