[package]
name = "hs-eventbus-mqtt-ha"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
hs-contracts = { path = "../hs-contracts" }
hs-eventbus-api = { path = "../hs-eventbus-api" }
rumqttc.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
