[package]
name = "hs-logger-core"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
hs-device-contracts = { path = "../hs-device-contracts" }
hs-eventbus-api = { path = "../hs-eventbus-api" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
opentelemetry.workspace = true
