[package]
name = "hs-service-device-demo"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
hs-contracts = { path = "../hs-contracts" }
hs-core = { path = "../hs-core" }
hs-eventbus-mqtt-ha = { path = "../hs-eventbus-mqtt-ha" }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
