[package]
name = "hs-service-device-esphome"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
esphome-native-api.workspace = true
hs-device-contracts = { path = "../hs-device-contracts" }
hs-device-core = { path = "../hs-device-core" }
hs-eventbus-mqtt-ha = { path = "../hs-eventbus-mqtt-ha" }
prost = "0.13.5"
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
